# barcode_detecting

./: CMakeLists.txt
doc/: Doxyfile.in
lib/: CMakeLists.txt  barcode_detecting.cpp  barcode_detecting.h  poligon.cpp  poligon.h
test/: CMakeLists.txt  test.cpp
test/results/: cods.txt  res_changed.txt
